fix update and delete answer lauraye27/miw-frontend-foro#31